--- a/package.json
+++ b/package.json
@@ -5,7 +5,8 @@
   "dependencies": {
     "markdown": ">= 0.2.1",
     "yaml": ">= 0.1.2",
-    "jade": ">= 0.10.7"
+    "jade": ">= 0.10.7",
+    "node-static": ">=0.5.6"
   },
   "keywords": ["site", "generator", "blog", "jekyll"],
   "repository": "git://github.com/adrianolaru/nozzle",
