--- a/package.json
+++ b/package.json
@@ -2,13 +2,11 @@
 , "version": "0.0.4"
 , "description": "Simple site generator"
 , "author": "Adrian Olaru <agolaru@gmail.com>"
-, "dependencies": {
-  , "markdown": ">= 0.2.1"
-  , "yaml": ">= 0.2.1"
-  , "jade": ">= 0.10.7"
-  , "node-static": ">=0.5.6"}
+, "dependencies": { "markdown": ">= 0.2.1"
+                  , "yaml": ">= 0.2.1"
+                  , "jade": ">= 0.10.7"
+                  , "node-static": ">=0.5.6"}
 , "keywords": ["site", "generator", "blog", "jekyll"]
 , "repository": "git://github.com/adrianolaru/nozzle"
-, "bin": { "nozzle" : "./nozzle.js" }
-, "engines": { "node": ">= 0.4.7" }
-}
+, "bin": {"nozzle": "./nozzle.js"}
+, "engines": {"node": ">= 0.4.7"}}
